--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "me.readplayer.unityavatarloader",
+  "name": "me.readyplayer.unityavatarloader",
   "version": "0.1.0",
   "displayName": "Unity Avatar Loader",
   "description": "For loading RPM Avatars",
@@ -22,9 +22,9 @@
   },
   "samples": [
     {
-      "displayName": "Samples",
-      "description": "Contains all avatar loading and rendering samples",
-      "path": "Samples~"
+      "displayName": "Examples",
+      "description": "Contains all avatar loading and rendering examples",
+      "path": "~Samples"
     }
   ]
 }
