feat: add correct name, email, url

--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "rpm"
   ],
   "author": {
-    "name": "RPM",
-    "email": "unity@example.com",
-    "url": "https://www.unity3d.com"
+    "name": "Ready Player Me",
+    "email": "info@readyplayer.me",
+    "url": "https://readyplayer.me"
   },
   "samples": [
     {
