feat: add gltfast to rpm asmdef

--- a/ReadyPlayerMe.asmdef
+++ b/ReadyPlayerMe.asmdef
@@ -1,8 +1,8 @@
 {
     "name": "ReadyPlayerMe",
     "references": [
-        "Siccity.GLTFUtility",
-        "WebView"
+        "WebView",
+        "glTFast"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
