--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "displayName": "Ready Player Me Avatar Loader",
   "description": "For loading RPM Avatars",
-  "unity": "2019.1",
-  "unityRelease": "38f1",
+  "unity": "2020.3",
+  "unityRelease": "0f1",
   "documentationUrl": "https://bit.ly/UnitySDKDocs",
   "changelogUrl": "https://docs.readyplayer.me/ready-player-me/integration-guides/unity-sdk/changelog",
-  "licensesUrl": "",
+  "licensesUrl": "https://github.com/readyplayerme/Unity-Avatar-Loader/blob/main/LICENSE.md",
   "dependencies": {
     "com.unity.ugui": "1.0.0",
     "com.unity.nuget.newtonsoft-json": "3.0.2"
