--- a/.github/workflows/pr-test-runner.yml
+++ b/.github/workflows/pr-test-runner.yml
@@ -17,7 +17,7 @@ jobs:
           - playmode
           - editmode
         unityVersion:
-          - 2019.4.38f1
+          - 2020.3.0f1
     steps:
       - name: Checkout Unity-SDK Repository
         uses: actions/checkout@v3
@@ -25,7 +25,7 @@ jobs:
           repository: "readyplayerme/Unity-SDK"
           submodules: true
           fetch-depth: 0
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.PAT }}
       - name: Checkout submodule branch
         run: |
           cd Assets/ReadyPlayerMe/${{ github.event.repository.name }}
