--- a/.github/workflows/pr-test-runner.yml
+++ b/.github/workflows/pr-test-runner.yml
@@ -29,7 +29,7 @@ jobs:
           token: ${{ secrets.PAT }}
       - name: Checkout submodule branch
         run: |
-          cd ${{ AVATAR_LOADER_PATH }}
+          cd ${{ secrets.AVATAR_LOADER_PATH }}
           git fetch -a
           git checkout ${{ github.event.pull_request.head.ref }}
           git pull origin ${{ github.event.pull_request.head.ref }}
