--- a/.github/workflows/pr-test-runner.yml
+++ b/.github/workflows/pr-test-runner.yml
@@ -26,7 +26,7 @@ jobs:
           submodules: true
           fetch-depth: 0
           ref: develop
-          token: ${{ secrets.DEV_SDK_TOKEN }}
+          token: ${{ secrets.CICD_REPO_TOKEN }}
       - name: Checkout submodule branch
         run: |
           cd ${{ secrets.AVATAR_LOADER_PATH }}
