feat: add install of numpy

--- a/.github/workflows/pr-test-runner.yml
+++ b/.github/workflows/pr-test-runner.yml
@@ -59,6 +59,9 @@ jobs:
 
       - name: Setup python
         uses: actions/setup-python@v4
+      - name: Install dependencies
+        run: |
+         pip install numpy
       - name: Parse performance report
         id: parser
         run: |
