--- a/.github/workflows/pr-test-runner.yml
+++ b/.github/workflows/pr-test-runner.yml
@@ -45,19 +45,19 @@ jobs:
           restore-keys: |
             Library-
 
-      - name: Run Tests
-        uses: game-ci/unity-test-runner@v2
-        env:
-          UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
-          UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
-          UNITY_SERIAL: ${{ secrets.UNITY_SERIAL }}
-        with:
-          unityVersion: ${{ matrix.unityVersion }}
-          testMode: ${{ matrix.testMode }}
-          projectPath: ${{ matrix.projectPath }}
-          checkName: ${{ matrix.unityVersion }} ${{ matrix.testMode }} tests result
-          githubToken: ${{ secrets.GITHUB_TOKEN }}
-          coverageOptions: "generateAdditionalMetrics;generateHtmlReport;generateBadgeReport;assemblyFilters:+my.assembly.*"
+#      - name: Run Tests
+#        uses: game-ci/unity-test-runner@v2
+#        env:
+#          UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
+#          UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
+#          UNITY_SERIAL: ${{ secrets.UNITY_SERIAL }}
+#        with:
+#          unityVersion: ${{ matrix.unityVersion }}
+#          testMode: ${{ matrix.testMode }}
+#          projectPath: ${{ matrix.projectPath }}
+#          checkName: ${{ matrix.unityVersion }} ${{ matrix.testMode }} tests result
+#          githubToken: ${{ secrets.GITHUB_TOKEN }}
+#          coverageOptions: "generateAdditionalMetrics;generateHtmlReport;generateBadgeReport;assemblyFilters:+my.assembly.*"
 
       - name: Setup python
         uses: actions/setup-python@v4
