feat: add running of benchmark report always

--- a/.github/workflows/pr-test-runner.yml
+++ b/.github/workflows/pr-test-runner.yml
@@ -60,7 +60,7 @@ jobs:
           coverageOptions: "generateAdditionalMetrics;generateHtmlReport;generateBadgeReport;assemblyFilters:+my.assembly.*"
 
       - name: Setup python
-        if: ${{ matrix.testMode == 'editmode' }}
+        if: ${{ matrix.testMode == 'editmode' && always() }}
         uses: actions/setup-python@v4
       - name: Install dependencies
         if: ${{ matrix.testMode == 'editmode' }}
