--- a/.github/workflows/pr-test-runner.yml
+++ b/.github/workflows/pr-test-runner.yml
@@ -82,13 +82,16 @@ jobs:
       - name: Post comment with benchmark report
         uses: actions/github-script@v6
         if: ${{ matrix.testMode == 'editmode' }}
+        env:
+          MULTILINE_OUTPUT: ${{ steps.parser.outputs.report }}
         with:
+          github-token: ${{ secrets.DEV_SDK_TOKEN }}
           script: |
               github.rest.issues.createComment({
                 issue_number: context.issue.number,
                 owner: context.repo.owner,
                 repo: context.repo.repo,
-                body: '${{ steps.parser.outputs.report }}'
+                body: process.env.MULTILINE_OUTPUT
               })
 
       - name: Push performance benchmark data to git
