--- a/.github/workflows/pr-test-runner.yml
+++ b/.github/workflows/pr-test-runner.yml
@@ -76,7 +76,7 @@ jobs:
         env:
           MULTILINE_OUTPUT: ${{ steps.parser.outputs.report }}
         with:
-          github-token: ${{ secrets.DEV_SDK_TOKEN }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
               github.rest.issues.createComment({
                 issue_number: context.issue.number,
