fix: add generation of settings

--- a/Editor/ReadyPlayerMe.AvatarLoader.Editor.asmdef
+++ b/Editor/ReadyPlayerMe.AvatarLoader.Editor.asmdef
@@ -3,7 +3,8 @@
   "references": [
     "ReadyPlayerMe.AvatarLoader",
     "ReadyPlayerMe.Core.Editor",
-    "ReadyPlayerMe.Core"
+    "ReadyPlayerMe.Core",
+    "ReadyPlayerMe.AvatarLoader.Editor.Tests"
   ],
   "includePlatforms": [
     "Editor"
