feat: update editor test asmdef

--- a/Tests/Editor/ReadyPlayerMe.AvatarLoader.Editor.Tests.asmdef
+++ b/Tests/Editor/ReadyPlayerMe.AvatarLoader.Editor.Tests.asmdef
@@ -10,10 +10,12 @@
   ],
   "excludePlatforms": [],
   "allowUnsafeCode": false,
-  "overrideReferences": false,
+  "overrideReferences": true,
   "precompiledReferences": [],
-  "autoReferenced": true,
-  "defineConstraints": [],
+  "autoReferenced": false,
+  "defineConstraints": [
+    "UNITY_INCLUDE_TESTS"
+  ],
   "versionDefines": [],
   "noEngineReferences": false
 }
