--- a/Runtime/Extras/Editor/ReadyPlayerMe.Extras.Editor.asmdef
+++ b/Runtime/Extras/Editor/ReadyPlayerMe.Extras.Editor.asmdef
@@ -1,18 +1,18 @@
 {
-  "name": "ReadyPlayerMe.Extras.Editor",
-  "references": [
-    "ReadyPlayerMe",
-    "ReadyPlayerMe.AvatarLoader"
-  ],
-  "includePlatforms": [
-    "Editor"
-  ],
-  "excludePlatforms": [],
-  "allowUnsafeCode": false,
-  "overrideReferences": false,
-  "precompiledReferences": [],
-  "autoReferenced": true,
-  "defineConstraints": [],
-  "versionDefines": [],
-  "noEngineReferences": false
+    "name": "ReadyPlayerMe.Extras.Editor",
+    "rootNamespace": "",
+    "references": [
+        "ReadyPlayerMe.AvatarLoader"
+    ],
+    "includePlatforms": [
+        "Editor"
+    ],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
