chore: small name update

--- a/Tests/Editor/ReadyPlayerMe.AvatarLoader.Editor.Tests.asmdef
+++ b/Tests/Editor/ReadyPlayerMe.AvatarLoader.Editor.Tests.asmdef
@@ -1,23 +1,22 @@
 {
-  "name": "ReadyPlayerMe.AvatarLoader.Editor.Tests",
-  "rootNamespace": "",
-  "references": [
-    "ReadyPlayerMe.AvatarLoader",
-    "ReadyPlayerMe.Core",
-    "ReadyPlayerMe.Core.Editor",
-    "ReadyPlayerMe.Common.Tests"
-  ],
-  "includePlatforms": [
-    "Editor"
-  ],
-  "excludePlatforms": [],
-  "allowUnsafeCode": false,
-  "overrideReferences": true,
-  "precompiledReferences": [],
-  "autoReferenced": false,
-  "defineConstraints": [
-    "UNITY_INCLUDE_TESTS"
-  ],
-  "versionDefines": [],
-  "noEngineReferences": false
+    "name": "ReadyPlayerMe.AvatarLoader.Tests.Editor",
+    "rootNamespace": "",
+    "references": [
+        "ReadyPlayerMe.AvatarLoader",
+        "ReadyPlayerMe.Core",
+        "ReadyPlayerMe.Core.Editor"
+    ],
+    "includePlatforms": [
+        "Editor"
+    ],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": true,
+    "precompiledReferences": [],
+    "autoReferenced": false,
+    "defineConstraints": [
+        "UNITY_INCLUDE_TESTS"
+    ],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
