--- a/.github/workflows/pr-test-runner.yml
+++ b/.github/workflows/pr-test-runner.yml
@@ -124,7 +124,9 @@ jobs:
           git config --global user.name "dev-sdk"
           git config --global user.email "dev-sdk@wolf3d.io"
           git fetch --all
-          git pull origin develop
           git add PerformanceData.json
           git commit -m 'chore: update performance data'
+          git status
+          git reset --hard
+          git pull origin develop --rebase
           git push origin develop
